<resources>
    <string name="app_name">snake bite Detection </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="uplodimage" >uplod image</string>
    <string name="takeimage" >take image</string>
    <string name="back" >back</string>
    <string name="moredetails" >More Details</string>
    <string name="preventation">Preventation</string>
    <string name="ste7p">7.Do not kill snake in the wild,Throwing rocks at a snake or shooting at them is looking for trouble</string>
            <string name="tile">PREVENTATION OF SNAKE BITE</string>
            <string name="header">Many of Tanzanian are out door and spend a great deal of their time fishing ,hiking ,farming or just herding their livestock. Confrontation with snake are therefore rather common . Here are the few suggestion on how to avoid snakes and snakebite</string>
            <string name="step1">1.Leave snake alone</string>
            <string name="step2">2.If you are in the veld , wear stout shoes or boots (not sandals) and long trousers , preferably denims.Most victim are bitten on lower or ankle,often when they accidentaly stand yon a snake.</string>
            <string name="step3">3.Do not walk barefoot at night in a veld.if you have to move around in the dark , take along touch to light your way</string>
            <string name="step4">4.Keep your eyes open and look where your going .when mountain climbing don’t put your hands in a piace that are out of sight .when collecting fire woods ,don’t reach into holes ,burrows and hollow logs</string>
            <string name="step5">5.Do not steps over logs and large rocks ,as a snake may be sunning itself on the opposite side Rather sted onto such object</string>
            <string name="step6">6.If you do come close a snake .Stand perfectly still .No snake will come and attack you .if your far distance from a snake stay 4 m or more ,retreat slowly .snake do not chase people .</string>
            <string name="step8">8.Do not temper with seemingly dead snake ,as some of them feign dead .The body my be turned sideways or upside down while the tongue hang out bewa.re</string>
            <string name="step9">9. Treat all snakes with respect</string>
            <string name="step10">10. In order to keep snake away from sure environment around houses are tied up and free from students and all sort of pest because all that attract snakes to live near or in human settlement</string>
    <string name="stepfirst">Venom Type And spicies</string>
    <string name="stepfirst10">1.Haemotoxic</string>
    <string name="stepfirst11">1.Cytotoxic</string>
    <string name="stepfirst12">1.Neurotoxic</string>
    <string name="stepfirst2">VENOMS </string>
    <string name="stepfirst4">These can be classified as follows;</string>
    <string name="stepfirst5">1.Haemotoxic : (boomslang ,Vine snake(Eastern and savana)), causing bleeding due to a coagulation defect</string>
    <string name="stepfirst7">Dominant clinical presentation of victim -> Bleeding(B)</string>
    <string name="stepfirst8">First Aid ->: Suction or nil</string>
    <string name="sdfg">Suportive Treatment ->: Blood or blood component therapy</string>
    <string name="sdfghj">Antivenom may be necessary for threat to limb or life ->: Bloomslang]></string>
    <string name="hhhhh">Antivenom Type->: Bloomslang monospecific</string>
    <string name="ffgg">Sugested dose by intravenous injection ->: 10-20 ml]</string>
    <string name="ujjbbbnm">Cytotoxic</string>
    <string name="fddfsf">Snakes species ->: Puff adder, Gaboon adder, spitting cobras (Mozambique,black-necked, black, zebra)</string>
    <string name="eru">These can be classified as follows;</string>
    <string name="dfv">Snakes species ->: Puff adder, Gaboon adder, spitting cobras (Mozambique,black-necked, black, zebra)</string>
    <string name="sdfgv">Cause extensive painful swelling around the site of the bite with possible tissue destruction, Bleeding may occur in puff adder</string>
    <string name="dfg">First Aid ->: Suction or nil</string>
    <string name="dfghjh">Suportive Treatment ->: intravenous fluids Elevate bitten limb</string>
    <string name="fvbn">Antivenom may be necessary for threat to limb or life ->: Puff adder and spitting cobras, Gaboon adder</string>
    <string name="vbn">Sugested dose by intravenous injection ->: 50 ml puff adder and spitting cobras and 200ml Gaboon adder</string>
    <string name="ghhgjg">Antivenom Type->: Polyvalent]</string>
    <string name="gghfjk">Neurotoxic</string>
    <string name="ggfgfg">(cobras,mambas (green and black), non spitting cobras) -> causing paralysis of the muscles including those requid for swallowing &amp; respiration.</string>
    <string name="jklkjgfds">First Aid – >: Sunction oil . Non spitting cobras : preasure immobilization or arterial tourniquet. Mambas : arteriaj tourquet.Polyvalent antivenoms for the triad of perioral Artificial respiration may be necessary</string>
    <string name="sfdfd">Supportive treatment->: Oxgen by mask or ventilation,Protect the airway</string>
    <string name="ffgdffh">Antivenom may be necessary for threat to limb or life->: All spicies</string>
    <string name="dfdffg">Antivenom type->: Polyvalent</string>
    <string name="vfvfbv">80 ml (40 – 200ml) small doses may lead to a recurrence of symotoms</string>
    <string name="dgfg">*Sunction is of minimal benefit but reassuring to the patient.</string>
    <string name="dfgbvn">*Some authorities prefer keeping the bitten limb at heart level</string>
    <string name="bvbvnbv">*Polyvalent antivenom is effective against the bites of the mambas ,cobras,puff adder and Gaboon adder. A test dose of antvenom is not indicated</string>
</resources>