<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stepfirst"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stepfirst2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stepfirst10"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stepfirst11"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stepfirst12"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stepfirst4"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stepfirst5"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stepfirst7"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stepfirst8"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdfg"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdfghj"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hhhhh"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ffgg"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ujjbbbnm"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
           <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fddfsf"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eru"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dfv"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdfgv"
            tools:ignore="VisualLintLongText" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dfg"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dfghjh"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fvbn"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ghhgjg"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vbn"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gghfjk"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ggfgfg"
            tools:ignore="VisualLintLongText" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jklkjgfds"
            tools:ignore="VisualLintLongText" />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sfdfd"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ffgdffh"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dfdffg"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vfvfbv"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dgfg"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dfgbvn"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bvbvnbv"
                tools:ignore="VisualLintLongText" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>