<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preventation"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tile"
                android:textColor="@color/white2"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="17sp"
            android:textColor="@color/white2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
            tools:ignore="VisualLintLongText" />
            >
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textColor="@color/white2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step2"
            android:textColor="@color/white2"
            tools:ignore="VisualLintLongText" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3"
            android:textColor="@color/white2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step4"
            android:textColor="@color/white2"
            tools:ignore="VisualLintLongText" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step5"
            android:textColor="@color/white2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step6"
                android:textColor="@color/white2"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ste7p"
                android:textColor="@color/white2"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                tools:ignore="VisualLintLongText" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step8"
            android:layout_marginTop="16dp"
            android:textColor="@color/white2"
            android:layout_marginBottom="8dp"
            tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step9"
                android:textColor="@color/white2"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step10"
                android:textColor="@color/white2"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                tools:ignore="VisualLintLongText" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>